--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                     <div class="button-container">
                         <div class="key">RUN</div>
                         <audio id="run-sound">
-                            <source src="welcome to the future.m4a" type="audio/mp4">
+                            <source src="sounds/welcome to the future.m4a" type="audio/mp4">
                         </audio>
                         <div class="key">EXIT</div>
                         <audio id="exit-sound">
-                            <source src="ohbot.wav" type="audio/wav">
+                            <source src="sounds/ohbot.mp3" type="audio/mpeg">
                         </audio>
                     </div>
                 </div>
