added new pages for the iframe

--- a/index.html
+++ b/index.html
@@ -15,16 +15,7 @@
                     <div class="console-screen b-rad-4 screen" id="console-screen">
                         <ul>
                             <li id="welcome">Welcome! (click RUN)</li>
-                            <li id="projects">Projects ▼
-                                <ol>
-                                    <li><a href="#">Netmatters Home Page Clone</a></li>
-                                    <li><a href="#">Random Picture Array</a></li>
-                                    <li><a href="#">Project 3</a></li>
-                                    <li><a href="#">Project 4</a></li>
-                                    <li><a href="#">Project 5</a></li>
-                                    <li><a href="#">Project 6</a></li>
-                                </ol>
-                            </li>
+                            <li id="projects">Projects</li>
                             <li id="about">About Me</li>
                             <li id="contact">Contact Me</li>
                             <li id="scion">Scion Project</li>
@@ -61,7 +52,7 @@
             <div class="monitor-inner b-rad-3">
                 <div class="monitor-screen b-rad-4 screen" id="monitor-screen">
                     <div id="waiting-text">Waiting for input...</div>
-                    <iframe src="" frameborder="0"></iframe>
+                    <iframe id="monitor-iframe" src="" frameborder="0"></iframe>
                 </div>
             </div>
         </section>
