new html files added and images

--- a/about.html
+++ b/about.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h3>About Me</h3>
+    <h3>Profile</h3>
+    <p>Name: Christopher Day</p>
+    <p>Age: 45 years</p>
+    <p>Location: United Kingdom</p>
+    
 </body>
 </html>
