--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section class="monitor-outer b-rad-3">
             <div class="monitor-inner b-rad-3">
                 <div class="monitor-screen b-rad-4 screen" id="monitor-screen">
-                    <div id="waiting-text">Waiting for input...</div>
+                    <!-- <div id="waiting-text">Waiting for input...</div> -->
                     <iframe id="monitor-iframe" src="" frameborder="0"></iframe>
                 </div>
             </div>
