--- a/projects.html
+++ b/projects.html
@@ -10,15 +10,15 @@
 <body>
     <div class="card-grid">
         <div class="card">
-            <img src="project-image.jpg" alt="Project Image">
+            <img src="images/Screenshot 2025-02-15 104502.png" alt="Project Image">
             <h2>Netmatters Website Clone</h2>
             <p>HTML & CSS Assessment to rebuild the Netmatters homepage.</p>
             
         </div>
         <div class="card">
-            <img src="project-image.jpg" alt="Project Image">
-            <h2>Project Title</h2>
-            <p>Description of the project goes here.</p>
+            <img src="images/Screenshot 2025-02-15 104550.png" alt="Project Image">
+            <h2>Random Image Array</h2>
+            <p>Javascript Array assessment to build a random picture generator with save capabilities</p>
         </div>
         <div class="card">
             <img src="project-image.jpg" alt="Project Image">
