more pages added and css and js

--- a/scion.html
+++ b/scion.html
@@ -17,8 +17,8 @@
         <div class="treehouse">
             <h2>Treehouse</h2>
             <p>Treehouse is an online learning community, featuring videos covering a number of topics from basic HTML to C# programming, iOS development, data analysis, and more. By completing courses users can earn points, allowing them to track their progress and see how much they've covered in certain areas.
-            <p>Total Score</p>
-            <a href="https://teamtreehouse.com/home">teamtreehouse.com</a>
+            <p>Total Score!</p>
+            <a href="https://teamtreehouse.com/home" target="_blank">teamtreehouse.com</a>
         </div>
         <div class="netmatters">
             <h2>About Netmatters</h2>
