--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,16 @@
 <body>
     <div class="contact-container">
         <div class="info">
-            <h3>Contact Me</h3>
-            <p>Email: &#x2329;<a href="mailto:chrisdaypro@protonmail.com">chrisdaypro@protonmail.com</a>&#x232A;</p>
+            <div class="get">
+                <h2>Get In Touch</h2>
+                <p>Please fill out the form and give a short message about your project. We will get back to you as soon as possible.</p>
+            </div>
+            <div class="number">
+                <h2>Or call us</h2>
+                <p>Call us: <a href="tel:+447394942864">07394 942864</a></p>
+                <p>Monday - Friday: 8am - 5pm</p>
+                <p>To arrange a consultation or to discuss ongoing projects, don't hesitate to contact us.</p>
+            </div>
         </div>
         <div class="form-container">
             <div class="contact-form" >
