layout and medias

--- a/about.html
+++ b/about.html
@@ -11,7 +11,11 @@
     <h3>Profile</h3>
     <p>Name: Christopher Day</p>
     <p>Age: 45 years</p>
-    <p>Location: United Kingdom</p>
+    <p>Location: Benfleet, Essex. United Kingdom</p>
+    <h3>About Me</h3>
+    <p>At the age of 45, after 24 years in the Plastic Injection Moulding Industry, I felt my life and career wasn't going in the way I expected. I have always been interested in coding and have tried to gain as much knowledge as i could with the limited time available to someone working a full time night shift and taking care of two boys with ADHD and a partner with disabilities. I wrote a children's book called <a href="https://play.google.com/store/books/details?id=10CLEAAAQBAJ">Luna</a>, which can be found on <a href="https://play.google.com/store/books/details?id=10CLEAAAQBAJ">Google Play Books</a>. I have tinkered with Arduino and Raspberry Pi and learned Ethical Hacking as a hobby. </p>
+    <p>The <a href="scion.html">SCS Scheme at Netmatters</a> gave me the start I needed in coding HTML, CSS, JavaScript and PHP.  I can design mockups in Balsamiq and design interactive and responsive layouts in HTML and CSS to the highest standard.</p>
+    <p>I love the way tech can be made to look old, made to look like its been around for hundreds of years. The glow of the green terminal text makes me so happy.</p>
     
 </body>
 </html>
