--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,11 @@
             <h2>Project Title</h2>
             <p>Description of the project goes here.</p>
         </div>
+        <div class="card">
+            <img src="project-image.jpg" alt="Project Image">
+            <h2>Project Title</h2>
+            <p>Description of the project goes here.</p>
+        </div>
     </div>
 </body>
 </html>
