--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </audio>
                         <div class="key">EXIT</div>
                         <audio id="exit-sound">
-                            <source src="sounds/ohbot.mp3" type="audio/mpeg">
+                            <source src="sounds/ohbot.m4a" type="audio/mp4">
                         </audio>
                     </div>
                 </div>
@@ -51,7 +51,6 @@
         <section class="monitor-outer b-rad-3">
             <div class="monitor-inner b-rad-3">
                 <div class="monitor-screen b-rad-4 screen" id="monitor-screen">
-                    <!-- <div id="waiting-text">Waiting for input...</div> -->
                     <iframe id="monitor-iframe" src="" frameborder="0"></iframe>
                 </div>
             </div>
