--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     </div>
                 </div>
             </section>
+            
             <section class="matrix-outer b-rad-3">
                 <div class="matrix-inner b-rad-3">
                     <div class="matrix-screen b-rad-4">
@@ -54,6 +55,12 @@
                     <iframe id="monitor-iframe" src="" frameborder="0"></iframe>
                 </div>
             </div>
+        </section>
+        <section class="screw-container">
+            <div class="screw"></div>
+            <div class="screw"></div>
+            <div class="screw"></div>
+            <div class="screw"></div>
         </section>
     </main>
     <footer>
