--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             </div>
             <div class="number">
                 <h2>Or call us</h2>
-                <p>Call us: <a href="tel:+447394942864">07394 942864</a></p>
+                <p>Call us: <a href="tel:+447394942864">07### ######</a></p>
                 <p>Monday - Friday: 8am - 5pm</p>
                 <p>To arrange a consultation or to discuss ongoing projects, don't hesitate to contact us.</p>
             </div>
