--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <section class="matrix-outer b-rad-3">
                 <div class="matrix-inner b-rad-3">
                     <div class="matrix-screen b-rad-4">
-                        <canvas id="canvas" class="b-rad-4"></canvas>
+                        <canvas id="canvas" class="b-rad-4" placeholder="Loading Teminal..."></canvas>
                     </div>
                 </div>
             </section>
