php and css changes

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
             <div class="screw"></div>
             <div class="screw"></div>
         </section>
+        <div>
+            <img class="cog" src="images/cog1.png" alt="cog">
+        </div>
     </main>
     <footer>
         
